--- a/Client/package.json
+++ b/Client/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/lab": "^7.0.1-beta.18",
     "@mui/material": "^7.3.4",
+    "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.0.1",
     "react-toastify": "^10.0.6"
   },
